deployment/neo4j/neo4j-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: neo4j-db
  name: neo4j-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo4j-db
  template:
    metadata:
      labels:
        app: neo4j-db
    spec:
      containers:
        - image: neo4j:4.4.12
          name: neo4j
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 7474
              name: http
            - containerPort: 7687
              name: bolt
            - containerPort: 7473
              name: https
          volumeMounts:
            - name: neo4j-plugins
              mountPath: "/var/lib/neo4j/plugins"
            - name: neo4j-data
              mountPath: "/var/lib/neo4j/data"
      volumes:
        - name: neo4j-data
          persistentVolumeClaim:
            claimName: neo4j-data-claim
        - name: neo4j-plugins
          persistentVolumeClaim:
            claimName: neo4j-plugin-claim
