deployment/neo4j/neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fc-neo4j
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 7474
      targetPort: 7474
      name: http
    - protocol: TCP
      port: 7473
      targetPort: 7473
      name: https
    - protocol: TCP
      port: 7687
      targetPort: 7687
      name: bolt
  selector:
    app: neo4j-db
